--- a/app/views/factory/admin/products/_menu.html.erb
+++ b/app/views/factory/admin/products/_menu.html.erb
@@ -1,9 +1,4 @@
-<div class="ui top attached borderless menu">
-  <div class="header item">Products</div>
+<div class="ui top attached tabular menu">
+  <div class="active item">Products</div>
   <%= link_to 'Product Taxon', admin_product_taxons_path, class: 'item' %>
-  <div class="right menu">
-    <div class="item">
-      <%= link_to 'New Admin Product', new_admin_product_path, class: 'ui teal button' %>
-    </div>
-  </div>
 </div>
