--- a/app/views/factory/admin/products/_search_form.html.erb
+++ b/app/views/factory/admin/products/_search_form.html.erb
@@ -1,7 +1,7 @@
 <%= search_form_with model: Product.new do |f| %>
   <div class="fields">
     <%= f.text_field :name %>
-    <%= f.submit 'Search' %>
+    <%= f.submit %>
   </div>
 <% end %>
 
