my & wx use same controller

--- a/app/views/factory/my/customs/edit.html.erb
+++ b/app/views/factory/my/customs/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="ui segment breadcrumb">
-  <%= link_to 'Back', my_customs_path, class: 'section' %>
+  <%= link_to 'Back', wx_customs_path, class: 'section' %>
   <div class="divider">/</div>
   <div class="active section">Edit</div>
 </div>
