--- a/app/views/factory/my/products/index.html.erb
+++ b/app/views/factory/my/products/index.html.erb
@@ -2,7 +2,7 @@
   <div class="weui-panel__hd">列表</div>
   <div class="weui-panel__bd">
   <% @products.each do |product| %>
-    <%= link_to wx_product_path(product), class: 'weui-media-box weui-media-box_appmsg' do %>
+    <%= link_to my_product_path(product), class: 'weui-media-box weui-media-box_appmsg' do %>
       <div class="weui-media-box__hd">
         <%= image_tag product.logo, class: 'weui-media-box__thumb' %>
       </div>
