--- a/app/views/factory/products/new.html.erb
+++ b/app/views/factory/products/new.html.erb
@@ -1,5 +1,5 @@
 <div class="ui segment breadcrumb">
-  <%= link_to 'Back', products_path, class: 'section' %>
+  <%= link_to 'Back', wx_products_path, class: 'section' %>
   <div class="divider">/</div>
   <div class="active section">Add</div>
 </div>
