--- a/app/views/factory/admin/product_plans/edit.html.erb
+++ b/app/views/factory/admin/product_plans/edit.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="ui segment">
-  <%= form_with model: @product, url: admin_product_plans_path(@product), local: true do |f| %>
+  <%= form_with model: @product, url: admin_product_plans_path(@product) do |f| %>
     <%= render partial: 'form', locals: { f: f } %>
   <% end %>
 </div>
