--- a/app/views/factory/products/show.html.erb
+++ b/app/views/factory/products/show.html.erb
@@ -35,5 +35,5 @@
 <% end %>
 
 <div class="weui-btn-area">
-  <%= submit_tag 'save', form: 'edit_custom', class: 'weui-btn weui-btn_primary' %>
+  <%= submit_tag t('helpers.submit.submit'), form: 'edit_custom', class: 'weui-btn weui-btn_primary' %>
 </div>
