--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,43 +1,41 @@
-<div class="ui top attached borderless menu">
-  <%= link_to 'Products', admin_products_path, class: 'item' %>
-  <div class="header item">Admin Product Taxons</div>
-  <div class="right menu">
-    <div class="item">
-      <%= link_to 'New Admin Product Taxon', new_admin_product_taxon_path, class: 'ui teal button' %>
-    </div>
-  </div>
+<% content_for :breadcrumb do %>
+<div class="ui basic segment breadcrumb">
+  <%= link_to t('factory.admin.products.index.title'), admin_products_path, class: 'section' %>
+  <i class="fas fa-angle-right divider"></i>
+  <div class="active section"><%= t('.title') %></div>
 </div>
+<% end %>
 
-<div class="ui attached segment">
-  <%= render 'search_form' %>
+<div class="ui top attached segment">
+  <%= render 'filter' %>
 </div>
 
 <table class="ui bottom attached table">
   <thead>
     <tr>
-      <th><%= ProductTaxon.human_attribute_name(:id) %></th>
       <th><%= ProductTaxon.human_attribute_name(:name) %></th>
-      <th><%= ProductTaxon.human_attribute_name(:position) %></th>
       <th><%= ProductTaxon.human_attribute_name(:profit_margin) %></th>
-      <th>Actions</th>
+      <th>
+        <%= link_to new_admin_product_taxon_path, remote: true, class: 'ui teal button' do %>
+          <i class="fas fa-plus"></i><%= t('.new') %>
+        <% end %>
+      </th>
     </tr>
   </thead>
   <tbody>
   <% @product_taxons.each do |product_taxon| %>
     <tr>
-      <td><%= product_taxon.id %></td>
       <td><%= product_taxon.name %></td>
-      <td><%= product_taxon.position %></td>
       <td><%= product_taxon.profit_margin %></td>
-      <td class="ui labels">
-        <%= link_to admin_product_taxon_path(product_taxon), data: { tooltip: t('.show') }, class: 'ui blue mini icon button' do %>
-          <i class="location arrow icon"></i>
+      <td>
+        <%= link_to admin_product_taxon_path(product_taxon), data: { tooltip: t('.show') }, class: 'ui mini circular icon button' do %>
+          <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to edit_admin_product_taxon_path(product_taxon), data: { tooltip: t('.edit') }, class: 'ui pink mini icon button' do %>
-          <i class="pencil alternate icon"></i>
+        <%= link_to edit_admin_product_taxon_path(product_taxon), data: { tooltip: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
+          <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_product_taxon_path(product_taxon), method: :delete, data: { tooltip: t('.destroy'), confirm: 'Are you sure?' }, class: 'ui red mini icon button' do %>
-          <i class="times icon"></i>
+        <%= link_to admin_product_taxon_path(product_taxon), method: :delete, data: { tooltip: t('.destroy'), confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
+          <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
     </tr>
