--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,12 +1,16 @@
-<%= render 'menu' %>
-
 <div class="ui attached segment">
-  <%= render 'search_form' %>
+  <%= render 'filter' %>
 </div>
 
 <table class="ui bottom attached table">
   <thead>
     <tr>
+      <th>
+        <%= Product.human_attribute_name(:product_taxon_id) %>
+        <%= link_to admin_product_taxons_path, data: { tooltip: '分类设置' }, target: '_blank' do %>
+          <i class="fas fa-cog"></i>
+        <% end %>
+      </th>
       <th><%= Product.human_attribute_name(:name) %></th>
       <th><%= Product.human_attribute_name(:logo) %></th>
       <th><%= Product.human_attribute_name(:main_image) %></th>
@@ -15,13 +19,16 @@
       <th><%= Product.human_attribute_name(:parts) %></th>
       <th></th>
       <th>
-        <%= link_to 'New Admin Product', new_admin_product_path, class: 'ui teal button' %>
+        <%= link_to new_admin_product_path, remote: true, class: 'ui teal button' do %>
+          <i class="fas fa-plus"></i><%= t('.new') %>
+        <% end %>
       </th>
     </tr>
   </thead>
   <tbody>
   <% @products.each do |product| %>
     <tr>
+      <td><%= product.product_taxon&.name %></td>
       <td><%= product.name %></td>
       <td><%= image_tag product.logo, class: 'ui small image' if product.logo.attached? %></td>
       <td><%= image_tag product.main_image, class: 'ui small image' if product.main_image.attached? %></td>
@@ -40,15 +47,15 @@
       <td>
         <%= link_to 'Plan', admin_product_plans_path(product), class: 'ui blue label' %>
       </td>
-      <td class="ui labels">
-        <%= link_to admin_product_path(product), class: 'ui blue mini icon button' do %>
-          <i class="location arrow icon"></i>
+      <td>
+        <%= link_to admin_product_path(product), class: 'ui mini circular icon button' do %>
+          <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to edit_admin_product_path(product), class: 'ui pink mini icon button' do %>
-          <i class="pencil alternate icon"></i>
+        <%= link_to edit_admin_product_path(product), remote: true, class: 'ui mini circular icon button' do %>
+          <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' }, class: 'ui red mini icon button' do %>
-          <i class="times icon"></i>
+        <%= link_to admin_product_path(product), method: :delete, data: { confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
+          <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
     </tr>
