--- a/app/views/factory/admin/parts/_filter.html.erb
+++ b/app/views/factory/admin/parts/_filter.html.erb
@@ -2,7 +2,7 @@
   <div class="fields">
     <%= f.collection_select :provider_id, Provider.all, :id, :name, { include_blank: true } %>
     <%= f.text_field :name %>
-    <%= f.submit 'Search' %>
+    <%= f.submit %>
   </div>
 <% end %>
 
