--- a/app/views/factory/admin/parts/index.html.erb
+++ b/app/views/factory/admin/parts/index.html.erb
@@ -1,20 +1,16 @@
-<div class="ui top attached borderless menu">
-  <%= link_to '配件', admin_parts_path, class: active_helper(controllers: ['parts']) %>
-  <%= link_to '配件分类', admin_part_taxons_path, class: active_helper(controllers: ['part_taxons']) %>
-  <div class="right menu">
-    <div class="item">
-      <%= link_to 'New Admin Part', new_admin_part_path, class: 'ui teal button' %>
-    </div>
-  </div>
-</div>
-
-<div class="ui attached segment">
-  <%= render 'search_form' %>
+<div class="ui top attached segment">
+  <%= render 'filter' %>
 </div>
 
 <table class="ui bottom attached table">
   <thead>
     <tr>
+      <th>
+        <%= Part.human_attribute_name(:part_taxon_id) %>
+        <%= link_to admin_part_taxons_path, data: { tooltip: '分类设置' }, target: '_blank' do %>
+          <i class="fas fa-cog"></i>
+        <% end %>
+      </th>
       <th><%= Part.human_attribute_name(:name) %></th>
       <th><%= Part.human_attribute_name(:qr_prefix) %></th>
       <th><%= Part.human_attribute_name(:taxon_str) %></th>
@@ -24,12 +20,17 @@
         <p><%= Part.human_attribute_name(:import_price) %></p>
         <p><%= Part.human_attribute_name(:profit_price) %></p>
       </th>
-      <th></th>
+      <th>
+        <%= link_to new_admin_part_path, class: 'ui teal button' do %>
+          <i class="fas fa-plus"></i><%= t('.new') %>
+        <% end %>
+      </th>
     </tr>
   </thead>
   <tbody>
   <% @parts.each do |part| %>
     <tr>
+      <td><%= part.part_taxon&.name %></td>
       <td><%= part.name %></td>
       <td><%= part.qr_prefix %></td>
       <td><%= part.taxon_str %></td>
