--- a/app/views/factory/admin/providers/index.html.erb
+++ b/app/views/factory/admin/providers/index.html.erb
@@ -1,26 +1,25 @@
-<div class="ui top attached borderless menu">
-  <div class="item header">商家列表</div>
-  <div class="right menu">
-    <div class="item"><%= link_to '新建', new_admin_provider_path, class: 'ui teal button' %></div>
-  </div>
-</div>
-
 <table class="ui bottom attached table">
   <thead>
     <tr>
-      <th>ID</th>
       <th>名称</th>
       <th></th>
-      <th></th>
+      <th>
+        <%= link_to new_admin_provider_path, class: 'ui teal button' do %>
+          <i class="fas fa-plus"></i><%= t('.new') %>
+        <% end %>
+      </th>
     </tr>
   </thead>
   <tbody>
   <% @providers.each do |provider| %>
     <tr>
-      <td><%= provider.id %></td>
       <td><%= provider.name %></td>
       <td><%= link_to '编辑', edit_admin_provider_path(provider) %></td>
-      <td><%= link_to '删除', admin_provider_path(provider), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td>
+        <%= link_to admin_provider_path(provider), method: :delete, data: { confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
+          <i class="fas fa-trash-alt"></i>
+        <% end %>
+      </td>
     </tr>
   <% end %>
   </tbody>
