--- a/app/views/factory/admin/parts/index.html.erb
+++ b/app/views/factory/admin/parts/index.html.erb
@@ -5,15 +5,14 @@
 <table class="ui bottom attached table">
   <thead>
     <tr>
+      <th><%= Part.human_attribute_name(:name) %></th>
       <th>
         <%= Part.human_attribute_name(:part_taxon_id) %>
         <%= link_to admin_part_taxons_path, data: { tooltip: '分类设置' }, target: '_blank' do %>
           <i class="fas fa-cog"></i>
         <% end %>
       </th>
-      <th><%= Part.human_attribute_name(:name) %></th>
       <th><%= Part.human_attribute_name(:qr_prefix) %></th>
-      <th><%= Part.human_attribute_name(:taxon_str) %></th>
       <th><%= Part.human_attribute_name(:part_plans) %></th>
       <th><%= Part.human_attribute_name(:price) %></th>
       <th>
@@ -21,7 +20,7 @@
         <p><%= Part.human_attribute_name(:profit_price) %></p>
       </th>
       <th>
-        <%= link_to new_admin_part_path, class: 'ui teal button' do %>
+        <%= link_to new_admin_part_path, remote: true, class: 'ui teal button' do %>
           <i class="fas fa-plus"></i><%= t('.new') %>
         <% end %>
       </th>
@@ -30,10 +29,9 @@
   <tbody>
   <% @parts.each do |part| %>
     <tr>
-      <td><%= part.part_taxon&.name %></td>
       <td><%= part.name %></td>
-      <td><%= part.qr_prefix %></td>
       <td><%= part.taxon_str %></td>
+      <td><%= part.qr_prefix %></td>
       <td class="ui labels">
         <%= link_to 'Plan', admin_part_plans_path(part), class: 'ui label' %>
       </td>
@@ -42,16 +40,16 @@
         <p><%= part.import_price %></p>
         <p><%= part.profit_price %></p>
       </td>
-      <td class="ui labels">
-        <%= link_to '供应商管理', admin_good_providers_path('Part', part), class: 'ui orange label' %>
-        <%= link_to admin_part_path(part), class: 'ui blue mini icon button' do %>
-          <i class="location arrow icon"></i>
+      <td>
+        <%= link_to '供应商管理', admin_good_providers_path('Part', part), class: 'ui mini circular icon button' %>
+        <%= link_to admin_part_path(part), class: 'ui mini circular icon button' do %>
+          <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to edit_admin_part_path(part), class: 'ui pink mini icon button' do %>
-          <i class="pencil alternate icon"></i>
+        <%= link_to edit_admin_part_path(part), class: 'ui mini circular icon button' do %>
+          <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_part_path(part), method: :delete, data: { confirm: 'Are you sure?' }, class: 'ui red mini icon button' do %>
-          <i class="times icon"></i>
+        <%= link_to admin_part_path(part), method: :delete, data: { tooltip: t('.destroy'), confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
+          <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
     </tr>
