--- a/app/views/factory/admin/parts/new.js.erb
+++ b/app/views/factory/admin/parts/new.js.erb
@@ -1,3 +1,3 @@
 $('#modal').replaceWith('<%= j(render 'new') %>');
-$('#modal').modal('show');
+$('#modal').modal({autof}).modal('show');
 remote_js_load(<%= raw remote_js_load %>)
