--- a/app/views/factory/admin/part_taxons/_part_taxon.html.erb
+++ b/app/views/factory/admin/part_taxons/_part_taxon.html.erb
@@ -6,24 +6,11 @@
   </td>
   <td><%= part_taxon.position %></td>
   <td>
-    <span class="ui toggle checkbox">
-      <%= check_box_tag :take_stock, nil, part_taxon.take_stock,
-                        data: {
-                          url: admin_part_taxon_path(part_taxon),
-                          method: :patch,
-                          remote: true,
-                          params: "[part_taxon]take_stock=#{!part_taxon.take_stock}"
-                        },
-                        id: nil
-      %>
-    </span>
-  </td>
-  <td>
     <%= link_to edit_admin_part_taxon_path(part_taxon), data: { tooltip: t('.edit') }, class: 'ui mini circular icon button' do %>
-      <i class="pencil alternate icon"></i>
+      <i class="fas fa-pencil-alt"></i>
     <% end %>
     <%= link_to admin_part_taxon_path(part_taxon), method: :delete, data: { tooltip: t('.destroy'), confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
-      <i class="times icon"></i>
+      <i class="fas fa-trash-alt"></i>
     <% end %>
   </td>
 </tr>
