--- a/app/views/factory/admin/part_taxons/_form.html.erb
+++ b/app/views/factory/admin/part_taxons/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, @part_taxon], local: true do |f| %>
+<%= form_with model: [:admin, @part_taxon] do |f| %>
   <%= render 'shared/error_messages', target: @part_taxon %>
   <%= f.text_field :name %>
   <%= f.number_field :position %>
