--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -7,5 +7,6 @@
   <%= f.number_field :reference_price %>
   <%= f.file_field :logo %>
   <%= f.file_field :main_image %>
+  <%= f.text_area :description %>
   <%= f.submit %>
 <% end %>
