--- a/app/views/factory/products/index.html.erb
+++ b/app/views/factory/products/index.html.erb
@@ -8,9 +8,11 @@
       </div>
       <div class="weui-media-box__bd">
         <h4 class="weui-media-box__title"><%= product.name %></h4>
-        <p class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</p>
+        <p class="weui-media-box__desc">
+          <%= product.description %>
+        </p>
         <ul class="weui-media-box__info">
-          <li class="weui-media-box__info__meta">文字来源</li>
+          <li class="weui-media-box__info__meta"><%= product.reference_price %></li>
           <li class="weui-media-box__info__meta">时间</li>
           <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">其它信息</li>
         </ul>
