--- a/app/views/factory/admin/products/_show_table.html.erb
+++ b/app/views/factory/admin/products/_show_table.html.erb
@@ -1,9 +1,3 @@
-<div class="ui segment breadcrumb">
-  <%= link_to 'Back', admin_products_path, class: 'section' %>
-  <div class="divider"> / </div>
-  <div class="active section">Show</div>
-</div>
-
 <table class="ui very basic large table">
   <tbody>
     <tr>
@@ -13,6 +7,10 @@
     <tr>
       <td class="right aligned"><%= Product.human_attribute_name(:qr_prefix) %></td>
       <td><%= @product.qr_prefix %></td>
+    </tr>
+    <tr>
+      <td class="right aligned"><%= Product.human_attribute_name(:description) %></td>
+      <td><%= @product.description %></td>
     </tr>
   </tbody>
 </table>
