--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -30,8 +30,8 @@
     <tr>
       <td><%= product.product_taxon&.name %></td>
       <td><%= product.name %></td>
-      <td><%= image_tag product.logo, class: 'ui small image' if product.logo.attached? %></td>
-      <td><%= image_tag product.main_image, class: 'ui small image' if product.main_image.attached? %></td>
+      <td><%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'ui tiny image' if product.logo.attached? %></td>
+      <td><%= image_tag product.main_image.variant(resize_to_limit: [80, 80]), class: 'ui tiny image' if product.main_image.attached? %></td>
       <td><%= product.qr_prefix %></td>
       <td><%= product.price %></td>
       <td class="ui labels">
@@ -48,7 +48,7 @@
         <%= link_to 'Plan', admin_product_plans_path(product), class: 'ui blue label' %>
       </td>
       <td>
-        <%= link_to admin_product_path(product), class: 'ui mini circular icon button' do %>
+        <%= link_to admin_product_path(product), remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-eye"></i>
         <% end %>
         <%= link_to edit_admin_product_path(product), remote: true, class: 'ui mini circular icon button' do %>
