--- a/app/views/factory/admin/part_taxons/index.html.erb
+++ b/app/views/factory/admin/part_taxons/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :breadcrumb do %>
   <div class="ui basic segment breadcrumb">
-    <%= link_to t('factory.admin.part_taxons.index.title'), admin_parts_path, class: 'section' %>
+    <%= link_to t('factory.admin.parts.index.title'), admin_parts_path, class: 'section' %>
     <i class="fas fa-angle-right divider"></i>
     <div class="active section"><%= t('.title') %></div>
   </div>
