--- a/app/views/factory/admin/part_taxons/_part_taxon.html.erb
+++ b/app/views/factory/admin/part_taxons/_part_taxon.html.erb
@@ -6,7 +6,7 @@
   </td>
   <td><%= part_taxon.position %></td>
   <td>
-    <%= link_to edit_admin_part_taxon_path(part_taxon), data: { tooltip: t('.edit') }, class: 'ui mini circular icon button' do %>
+    <%= link_to edit_admin_part_taxon_path(part_taxon), data: { tooltip: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
       <i class="fas fa-pencil-alt"></i>
     <% end %>
     <%= link_to admin_part_taxon_path(part_taxon), method: :delete, data: { tooltip: t('.destroy'), confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
