--- a/app/views/factory/admin/customs/index.html.erb
+++ b/app/views/factory/admin/customs/index.html.erb
@@ -10,6 +10,7 @@
       <th><%= Custom.human_attribute_name(:state) %></th>
       <th><%= Custom.human_attribute_name(:qr_code) %></th>
       <th><%= Custom.human_attribute_name(:ordered_at) %></th>
+      <th><%= Custom.human_attribute_name(:parts) %></th>
       <th></th>
     </tr>
   </thead>
@@ -17,10 +18,20 @@
   <% @customs.each do |custom| %>
     <tr>
       <td><%= custom.product.name %></td>
-      <td><%= custom.customer.name %></td>
+      <td><%= custom.buyer.name %></td>
       <td><%= custom.state %></td>
       <td><%= custom.qr_code %></td>
       <td><%= custom.ordered_at %></td>
+      <td class="ui labels">
+        <table class="ui very basic compact table">
+          <% custom.parts.each do |part| %>
+            <tr>
+              <td><span class="ui label"><%= link_to part.name, admin_part_path(part), target: '_blank' %></span></td>
+              <td><%= part.price %></td>
+            </tr>
+          <% end %>
+        </table>
+      </td>
       <td>
         <%= link_to admin_custom_path(custom), data: { tooltip: t('.show') }, class: 'ui mini circular icon button' do %>
           <i class="fas fa-eye"></i>
