my customs page

--- a/app/views/factory/my/customs/edit.html.erb
+++ b/app/views/factory/my/customs/edit.html.erb
@@ -1,9 +1,1 @@
-<div class="ui segment breadcrumb">
-  <%= link_to 'Back', wx_customs_path, class: 'section' %>
-  <div class="divider">/</div>
-  <div class="active section">Edit</div>
-</div>
-
-<div class="ui segment">
-  <%= render 'form' %>
-</div>
+<%= render 'factory/products/show' %>
