support label for select

--- a/app/views/factory/admin/part_taxons/_form.html.erb
+++ b/app/views/factory/admin/part_taxons/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.text_field :name %>
   <%= f.number_field :position %>
   <%= render partial: 'nodes/children_select', locals: { f: f, node: PartTaxon.new } %>
-  <%= f.check_box :individual %>
+  <%= f.number_field :min_select %>
+  <%= f.number_field :max_select %>
   <%= f.submit %>
 <% end %>
