--- a/app/views/factory/admin/part_taxons/index.html.erb
+++ b/app/views/factory/admin/part_taxons/index.html.erb
@@ -14,7 +14,8 @@
   <thead>
     <tr>
       <th><%= PartTaxon.human_attribute_name(:name) %></th>
-      <th><%= PartTaxon.human_attribute_name(:position) %></th>
+      <th><%= PartTaxon.human_attribute_name(:min_select) %></th>
+      <th><%= PartTaxon.human_attribute_name(:max_select) %></th>
       <th>
         <%= link_to new_admin_part_taxon_path, remote: true, class: 'ui teal button' do %>
           <i class="fas fa-plus"></i><%= t('.new') %>
