--- a/app/views/factory/my/customs/create.js.erb
+++ b/app/views/factory/my/customs/create.js.erb
@@ -1,2 +1,2 @@
 document.getElementById('total_price').innerText = '<%= @custom.price %>';
-document.getElementById('part_1_label').dataset.add_controller('disable');
+//document.getElementById('part_<%= %>_label').dataset.add_controller('disable');
