--- a/app/views/factory/products/_show.html.erb
+++ b/app/views/factory/products/_show.html.erb
@@ -12,26 +12,21 @@
 <% end %>
 
 <% @product.part_taxons.each do |part_taxon| %>
-<div>
-  <div class="weui-cells__title"><%= part_taxon.name %></div>
-  <div class="weui-cells weui-cells_radio">
-    <% part_taxon.parts.each do |part| %>
-    <label class="weui-cell weui-check__label" for="part_<%= part.id %>" id="part_<%= part.id %>_label" data-controller="input">
-      <span class="weui-cell__bd">
-        <span><%= part.name %></span>
-      </span>
-      <span class="weui-cell__ft">
-        <span><%= part.price %></span>
-        <%= check_box_tag 'custom[part_ids][]', part.id, @custom.part_ids.include?(part.id), data: { form: true, target: 'input.output disable.output' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
-        <i class="weui-icon-checked"></i>
-      </span>
-    </label>
-    <% end %>
-    <a href="javascript:void(0);" class="weui-cell weui-cell_link">
-      <div class="weui-cell__bd">添加更多</div>
-    </a>
+  <div class="weui-panel">
+    <div class="weui-panel__hd">
+      <span><%= part_taxon.name %></span>
+      <span class="weui-panel__extra">选择范围：<%= part_taxon.min_select %> - <%= part_taxon.max_select %></span>
+    </div>
+    <div class="weui-panel__bd" data-controller="input" data-input-order="<%= (@custom.part_ids & part_taxon.part_ids).join(',') %>" data-input-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
+      <% part_taxon.parts.each do |part| %>
+        <label class="weui-btn weui-btn_mini <%= active_assert(@custom.part_ids.include?(part.id), expected: 'weui-btn_primary', unexpected: 'weui-btn_default') %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
+          <span><%= part.name %></span>
+          <span class="weui-btn__extra"><%= part.price %></span>
+          <%= check_box_tag 'custom[part_ids][]', part.id, @custom.part_ids.include?(part.id), data: { action: 'input#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
+        </label>
+      <% end %>
+    </div>
   </div>
-</div>
 <% end %>
 
 <div class="weui-btn-area">
