--- a/app/views/factory/products/show.html.erb
+++ b/app/views/factory/products/show.html.erb
@@ -1,34 +1,1 @@
-<article class="weui-article">
-  <%= image_tag @product.main_image %>
-  <h1><%= @product.name %></h1>
-</article>
-
-<div id="sti">
-  <span class="weui-btn weui-btn_primary" id="total_price"><%= @custom.price %></span>
-</div>
-
-<%= form_with scope: :custom, url: my_customs_path, id: 'edit_custom' do |f| %>
-  <%= f.hidden_field :product_id, value: @product.id %>
-<% end %>
-
-<% @product.part_taxons.each do |part_taxon| %>
-  <div class="weui-panel">
-    <div class="weui-panel__hd">
-      <span><%= part_taxon.name %></span>
-      <span class="weui-panel__extra">选择范围：<%= part_taxon.min_select %> - <%= part_taxon.max_select %></span>
-    </div>
-    <div class="weui-panel__bd" data-controller="input" data-input-order="<%= (@custom.part_ids & part_taxon.part_ids).join(',') %>" data-input-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
-      <% part_taxon.parts.each do |part| %>
-        <label class="weui-btn weui-btn_mini <%= active_assert(@custom.part_ids.include?(part.id), expected: 'weui-btn_primary', unexpected: 'weui-btn_default') %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
-          <span><%= part.name %></span>
-          <span class="weui-btn__extra"><%= part.price %></span>
-          <%= check_box_tag 'custom[part_ids][]', part.id, @custom.part_ids.include?(part.id), data: { action: 'input#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
-        </label>
-      <% end %>
-    </div>
-  </div>
-<% end %>
-
-<div class="weui-btn-area">
-  <%= submit_tag t('helpers.submit.submit'), form: 'edit_custom', class: 'weui-btn weui-btn_primary' %>
-</div>
+<%= render 'show' %>
