--- a/app/views/factory/products/show.html.erb
+++ b/app/views/factory/products/show.html.erb
@@ -1,1 +1,5 @@
+<%= form_with scope: :custom, url: my_customs_path, id: 'edit_custom' do |f| %>
+  <%= f.hidden_field :product_id, value: @product.id %>
+<% end %>
+
 <%= render 'show' %>
