--- a/app/views/factory/my/customs/index.html.erb
+++ b/app/views/factory/my/customs/index.html.erb
@@ -32,6 +32,9 @@
             </li>
           </ul>
         </div>
+        <div class="weui-media-box__ft">
+        
+        </div>
       </div>
     <% end %>
   </div>
