--- a/app/assets/stylesheets/controllers/factory/my/customs/index-phone.css
+++ b/app/assets/stylesheets/controllers/factory/my/customs/index-phone.css
@@ -1,3 +1,9 @@
 .weui-media-box__ft {
   display: none;
+  align-self: stretch;
+}
+
+.weui-media-box__ft .weui-btn {
+  height: 100%;
+  border-radius: 0;
 }
