--- a/app/views/factory/my/customs/index.html.erb
+++ b/app/views/factory/my/customs/index.html.erb
@@ -5,7 +5,7 @@
   <div class="weui-panel__hd">列表</div>
   <div class="weui-panel__bd">
     <% @customs.each do |custom| %>
-      <div class="weui-media-box weui-media-box_appmsg">
+      <div class="weui-media-box weui-media-box_appmsg" data-controller="swipe" data-action="touchmove->swipe#left touchstart->swipe#start">
         <div class="weui-media-box__hd">
           <%= image_tag custom.product.logo, class: 'weui-media-box__thumb' %>
         </div>
@@ -32,8 +32,8 @@
             </li>
           </ul>
         </div>
-        <div class="weui-media-box__ft">
-        
+        <div class="weui-media-box__ft" data-target="swipe.open">
+          <div class="weui-btn weui-btn_mini weui-btn_primary">dd</div>
         </div>
       </div>
     <% end %>
