--- a/app/views/factory/my/customs/index.html.erb
+++ b/app/views/factory/my/customs/index.html.erb
@@ -7,6 +7,7 @@
     <% @customs.each do |custom| %>
       <div class="weui-media-box weui-media-box_appmsg" data-controller="swipe" data-action="touchmove->swipe#left touchstart->swipe#start">
         <div class="weui-media-box__hd">
+          <%= hidden_field_tag 'custom_ids[]', custom.id, form: 'add_cart', id: nil %>
           <%= image_tag custom.product.logo, class: 'weui-media-box__thumb' %>
         </div>
         <div class="weui-media-box__bd">
