--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, @product], local: true do |f| %>
+<%= form_with model: [:admin, @product] do |f| %>
   <%= render 'shared/error_messages', target: @product %>
   <%= render partial: 'nodes/outer_select', locals: { f: f, outer: 'product_taxon' } %>
   <%= f.text_field :name %>
