--- a/app/views/factory/admin/parts/_filter.html.erb
+++ b/app/views/factory/admin/parts/_filter.html.erb
@@ -1,4 +1,4 @@
-<%= search_form_with model: Part.new do |f| %>
+<%= form_with theme: 'search', model: Part.new do |f| %>
   <div class="fields">
     <%= f.collection_select :organ_id, Organ.all, :id, :name, { include_blank: true } %>
     <%= f.text_field :name %>
