--- a/app/views/factory/admin/product_taxons/_filter.html.erb
+++ b/app/views/factory/admin/product_taxons/_filter.html.erb
@@ -1,4 +1,4 @@
-<%= search_form_with model: ProductTaxon.new do |f| %>
+<%= form_with theme: 'search', model: ProductTaxon.new do |f| %>
   <div class="fields">
     <%= f.text_field :name %>
     <%= f.submit %>
