--- a/app/views/factory/my/customs/index.html.erb
+++ b/app/views/factory/my/customs/index.html.erb
@@ -1,13 +1,9 @@
-<%= form_with url: cart_my_customs_path, id: 'add_cart' do |f| %>
-<% end %>
-
 <div class="weui-panel weui-panel_access">
   <div class="weui-panel__hd">列表</div>
   <div class="weui-panel__bd">
     <% @customs.each do |custom| %>
       <div class="weui-media-box weui-media-box_appmsg" data-controller="swipe" data-action="touchmove->swipe#left touchstart->swipe#start">
         <div class="weui-media-box__hd">
-          <%= hidden_field_tag 'custom_ids[]', custom.id, form: 'add_cart', id: nil %>
           <%= image_tag custom.product.logo, class: 'weui-media-box__thumb' %>
         </div>
         <div class="weui-media-box__bd">
@@ -25,6 +21,9 @@
               <%= link_to edit_my_custom_path(custom), data: { tooltip: t('.edit') } do %>
                 <i class="fas fa-pencil-alt weui-icon"></i>
               <% end %>
+              <%= link_to cart_my_custom_path(custom), method: :post, data: { tooltip: t('.new') } do %>
+                <i class="fas fa-plus weui-icon"></i>
+              <% end %>
             </li>
           </ul>
         </div>
@@ -34,8 +33,4 @@
       </div>
     <% end %>
   </div>
-</div>
-
-<div class="weui-btn-area">
-  <%= submit_tag t('helpers.submit.next'), form: 'add_cart', class: 'weui-btn weui-btn_primary' %>
 </div>
