--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -51,6 +51,9 @@
         <%= link_to admin_product_path(product), remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-eye"></i>
         <% end %>
+        <%= link_to admin_customs_path(product_id: product.id), class: 'ui mini circular icon button' do %>
+          <i class="fas fa-cube"></i>
+        <% end %>
         <%= link_to edit_admin_product_path(product), remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
