--- a/app/views/factory/admin/customs/_form.html.erb
+++ b/app/views/factory/admin/customs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, @custom], local: true do |f| %>
+<%= form_with model: [:admin, @custom] do |f| %>
   <%= render 'shared/error_messages', target: @custom %>
   <%= f.text_field :name %>
   <%= f.text_field :customer %>
