--- a/app/views/factory/admin/customs/index.html.erb
+++ b/app/views/factory/admin/customs/index.html.erb
@@ -35,6 +35,9 @@
         <%= link_to admin_custom_trade_items_path(custom), data: { tooltip: t('factory.admin.trade_items.index.title') }, class: 'ui mini circular icon button' do %>
           <i class="fas fa-shopping-cart"></i>
         <% end %>
+        <%= link_to admin_custom_addresses_path(custom), data: { tooltip: t('factory.admin.addresses.index.title') }, class: 'ui mini circular icon button' do %>
+          <i class="fas fa-map-marker-alt"></i>
+        <% end %>
         <%= link_to edit_admin_custom_path(custom), data: { tooltip: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
