trade items list realy in this address

--- a/app/views/factory/my/principal_addresses/show.html+phone.erb
+++ b/app/views/factory/my/principal_addresses/show.html+phone.erb
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div class="weui-form-preview__ft">
-    <%= link_to '操作', my_principal_address_trade_items_path(@address), class: 'weui-form-preview__btn weui-form-preview__btn_primary' %>
+    <%= link_to '操作', my_principal_address_trade_items_path(@address, good_id: custom.id), class: 'weui-form-preview__btn weui-form-preview__btn_primary' %>
   </div>
 </div>
 <% end %>
